# ChangeLog for dev-libs/matrixssl
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/matrixssl/ChangeLog,v 1.9 2011/10/16 07:08:46 ssuominen Exp $

  16 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -matrixssl-3.1.3.ebuild:
  old

*matrixssl-3.2.2 (10 Oct 2011)

  10 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> +matrixssl-3.2.2.ebuild:
  Version bump using ebuild patch from Agostino Sarubbo.

*matrixssl-3.1.3 (25 Oct 2010)

  25 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  +matrixssl-3.1.3.ebuild:
  Version bump wrt #342645 by Roman v. Gemmeren.

*matrixssl-1.8.3 (25 Mar 2007)

  25 Mar 2007; Mike Frysinger <vapier@gentoo.org>
  +files/matrixssl-1.8.3-build.patch, +matrixssl-1.8.3.ebuild:
  Version bump.

*matrixssl-1.7.3 (31 Jan 2006)

  31 Jan 2006; Mike Frysinger <vapier@gentoo.org>
  +files/matrixssl-1.7.3-build.patch, +matrixssl-1.7.3.ebuild:
  Version bump.

*matrixssl-1.2.4 (18 Mar 2005)

  18 Mar 2005; <solar@gentoo.org> +metadata.xml, +matrixssl-1.2.4.ebuild:
  - ver bump to current. fixed faulty build process

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  matrixssl-1.0.2.ebuild:
  virtual/glibc -> virtual/libc

*matrixssl-1.0.2 (21 May 2004)

  21 May 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.