@@ -2,17 +2,17 @@
 Hash: SHA1
 
 DIST matrixssl-3-2-2-open.tgz 1743910 RMD160 5f1496ad5aaf9ea20ba03c232f3966a17ebd2e61 SHA1 b4029f4cbf920840a56645248310855e0972ab61 SHA256 ca0b715b9181f00ebb08ab673e4fea5e0f348b506f9f15acd830b51c4f6abf3e
-EBUILD matrixssl-3.2.2.ebuild 1377 RMD160 8f092cbc21f7913c3c70dc336567a02e6a46766c SHA1 86662f54e638676f3b699a172dda18222adde82e SHA256 8c0dc5d5204683441454ec711bc72c95cc4978654e92831842dd07bb50b6e93d
-MISC ChangeLog 1356 RMD160 d61ed84a491174a7f961d641f60464b3341c166d SHA1 ee9d207b36895d793ef422c2ef9bfe2b773ae304 SHA256 2a1df44f3b872bca5ea4741df0b92a9bf088f3afbb90da673c0dcc4da3ab3237
+EBUILD matrixssl-3.2.2.ebuild 1360 RMD160 9baa4858a341a9de07bec929a7ee92140ce43896 SHA1 8485d4f7ebf881aab32e08576ad4e30be2d63d0c SHA256 b5f0df9d06708267ece8fc783e7d00f1c3f9b1bb43f38a80fb53fda9f337a0c1
+MISC ChangeLog 1458 RMD160 0f65285dda78e73f2e010215f7c9db503ab9848b SHA1 04c8425d27ed09235078ce85a6d2d4cc5f171585 SHA256 cd752221fef10a7440148239bfb13147e736e895792ab4a944e31a87aab5b037
 MISC metadata.xml 161 RMD160 77385273ea1d12ed4093a4167307486b74d1cf82 SHA1 aa4b2873e32de89c0b0aeb26b5782f77cb00948e SHA256 a11fdd02015a232398fdf22a20d26a95fc34d44c54513e6b26b6128d0b76122e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJOmoL1AAoJEEdUh39IaPFNTNsH/04aSkBixn7uFHsANMPjJToh
-3WrRYvscySzt6yONKxY8kx3hHOqqhafYLmS5v7C47/IHeweGWn79wHYAcdJ3Hzan
-Z5x3AxJImssJOi0w6omeZuHBJTdJ8btmZwXLaKdCQGu57MAV7GBlDQiGsx2rXWLq
-HNK9fSdS7ae8xKTQ7d0DReAFfyDc4o73S3Bt4W3e5Dve7x01y3u8dzh4Emu4VrhD
-x6XBO4uQPt+kayvhecvGXx/E3Y1l/9w5f8P+owOmzwp+O6Aq2OdbicBspk53/dZp
-HS93SZWFqGaS8rqwYR76gb6i5YAvROjtFiHvWVexhVqsKF8cRS/91tNIcyIQHG4=
-=apz4
+iQEcBAEBAgAGBQJPaW/fAAoJEEdUh39IaPFNDYEIAJretqkLIrRUJgcYQHKP6TKB
+Gpj4ppHc7Y82uBSlOMf6UKez3uhyPDPt7hfWkri2BTN0guM5sJ90vEnJ5hHWbxKe
+ewXHz6FOIfZZ5CVu8TP/irFtc3nD9de1G0nh8eRGKKri9VQjOa3JE7U5441QRE4Q
+W9HIv83FhtyIP+xSTDcfyc1B/pgGTHx2xoBlVD+HknZuORJywOCXkEgK5GND1B9s
+ltmD0QgrwsX6Qa0Hqd2jTJMfKBcfVSuJ8xA+Sfk3zSJlmDLXfZu8hZb5H0ehUjJu
+91Xm3E3IPv7jjTN2iXxbKes9tbhBGnnRFkVK6bW27bLQXuWNXj6aQ0hv/7bSrFc=
+=pB7X
 -----END PGP SIGNATURE-----
