@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/matrixssl
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/matrixssl/ChangeLog,v 1.9 2011/10/16 07:08:46 ssuominen Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/matrixssl/ChangeLog,v 1.10 2012/03/21 06:06:22 ssuominen Exp $
+
+  21 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> matrixssl-3.2.2.ebuild:
+  Use gentoo mirrors.
 
   16 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -matrixssl-3.1.3.ebuild:
   old
